[package]
name = "bdacore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdaproto = { path = "../bdaproto" }
bdaindex = { path = "../bdaindex" }
prost-types = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
ppom = "0.7"

[dev-dependencies]
mockall = "0.11"
