[package]
name = "bdaindex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ppom = "0.7"
lmdb = "0.8"
lmdb-sys = "0.8"
bincode = "1.3"
tempdir = "0.3"
libc = "0.2"


[dev-dependencies]
mockall = "0.11"
